login controller, repository etc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.password=root
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
+#disable spring mvc default white label error page
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
