--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl=none
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.datasource.url=jdbc:h2:mem:testdb
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/hplus
 #spring.datasource.username=root
 #spring.datasource.password=root
